<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aid</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="login_or_signup_text">If you don\'t have an account it will be created for you.</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_signup_button_text">Go</string>
    <string name="login_signup_error_message">Please fix the errors below</string>

</resources>
