<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/login_or_signup"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="21dp"
        android:text="@string/login_or_signup_text" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp" >

        <TextView
        	android:id="@+id/login_signup_error_message"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:textColor="#EB4646"
        	android:visibility="invisible"
        	android:text="@string/login_signup_error_message" />
        
        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_signup_error_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/username_text" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_text"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_field"
            android:layout_centerHorizontal="true"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/login_signup_button_text" />
    </RelativeLayout>

    

</RelativeLayout>